2012-04-06 Alexander Malysh <amalysh at kannel.org>
    * doc/arch/arch.xml: fixed #354.

2012-04-06 Alexander Malysh <amalysh at kannel.org>
    * doc/arch/arch.xml: fixed #355.

2012-04-06 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml: fixed default source and destination addr
      ton. This fixes #636.

2012-03-28  Stipe Tolj  <stolj at kannel.org>
    * gw/smsbox.c: fix minor compiler warning. NLC.
    
2012-03-21 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_http.c, gwlib/cfg.def, doc/userguide/userguide.xml:
      added new option 'generic-param-dlr-err' to pass dlr-err for DLR.

2012-03-21 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_http.c: don't convert HTTP dlr errorcode as stated in SMPP
      spec because HTTP is not SMPP. Just pass dlr errorcode as is to smsbox
      in ?dlr? meta data group, similar to other smsc modules.

2012-03-21 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_http.c: request DLR also if conndata->dlr_url is set.

2012-03-21 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_http.c: write the whole URL, with query string by debugging.

2012-03-21 Alexander Malysh <amalysh at kannel.org>
    * gw/meta_data.h: added some defines to use for meta data.

2012-03-08  Stipe Tolj  <stolj at kannel.org>
    * gw/bb_boxc.c: fix MO routing logic implied by 'smsbox-route' context. We
      have been passing MOs that had a strict smsbox-id routing decission to
      an random not-identified smsbox if there was no smsbox-id connection.
      This breaks the MO routing criteria. Now we obey the smsbox-id routing
      decission and re-inject the MO message rather back to the main queue.
      This patchset fixes bug #633.
      
2012-03-07 Alexander Malysh <amalysh at kannel.org>
    * contrib/kannel-monitor/index.php, contrib/kannel-monitor/xmltoarray.php:
      This patch adds replaces the <? to <?php to fully support when open tags